Allow Installation with a policy-installed cert

Installation requires that the security level of the page be SECURE or
EV_SECURE, but this omitted the equivalent state on ChromeOS with a
policy-installed certificate. This CL ensures that all valid HTTPS
states permit installation.

Bug: 794256
Change-Id: I8ac7f2e6a7ca215197a32ec5ee534410d20d82b0
Reviewed-on: https://chromium-review.googlesource.com/823152
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: Eric Lawrence <elawrence@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523592}
Former-commit-id: 863211316ea87a733176192bb72c773aae0d4158